--- a/PrCel/PrCel/PrCel.csproj
+++ b/PrCel/PrCel/PrCel.csproj
@@ -30,6 +30,9 @@
 	  <MauiXaml Update="CelularPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="ListaProdutoPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	</ItemGroup>
 
 </Project>
